# NeuralNet

./: .gitignore  .project  =4.2.0  GenerateToyData.py  ImportData.py  KerasNet.py  KerasNet_backup copy.py  KerasRunner.py  Linear.py  NNRunner.py  NeuralNet.py  PytorchNet.py  README.md  Readme.md  delta.py  old_requirements.txt  pyproject.toml  resnet.py  test.py
Scripts/: BamSequenceProcessor.py  ClearLock.py  KerasNet.py  LogChecker.py  ReplaceDotsWithReference.py  SRADownloader.py  SRRListCleaner.py  SequenceProcessor.py  bam_run_script.sh  mptest.py  pf3kdownloader.py  run_script.sh
data_processing/: BamSequenceProcessor.py  ClearLock.py  CombineFq.py  CombineGVCF.py  GATKRunner.py  IndelCounter.py  MoveFq.py  NoCallFilter.py  PopNetRunner.sh  README.md  SRADownloader.py  SequenceProcessor.py  run_command.sh  run_recalibration.sh  run_script.sh  variantQualChecker.py
manuscript_notebooks/notebooks/: benchmarking.ipynb  draw_chrs.ipynb  graphing_impact_scores.ipynb  impact_score_neis.ipynb  impact_score_original.ipynb  running_new_sim.ipynb  running_validation_on_large_set.ipynb  variant_analysis.ipynb  variant_analysis_neis.ipynb
neural_net/: GenerateToyData.py  ImportData.py  KerasNet.py  KerasNet_backup copy.py  KerasNet_backup.py  KerasTuner.py  data_import.py  draw.py  models.py  resnet.py  runner.py  simulated_data.py  test.py
neural_net/archive/: AutoKeras.py  Linear.py  NNRunner.py  NeuralNet.py  README.md
vqsr/: FindNoCall.py  MakeSampleMap.py  NoCallBySample.py  NoCallFilter.py  run_command.sh  run_genotype.sh
(+33 files in other folders)
